# CollabEdit

./: CMakeLists.txt  Cargo.toml  README.md
cmake/: FindRust.cmake
cpp/rust-bridge/: CMakeLists.txt
cpp/rust-bridge/include/: crypto_wrapper.hpp
cpp/rust-bridge/src/: crypto_wrapper.cpp
rust/crypto-engine/: Cargo.toml  build.rs
rust/crypto-engine/src/: ffi.rs
scripts/: setup.sh
tests/integration/: test_crypto.cpp
