[package]
name = "crypto-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "crypto_engine"
crate-type = ["staticlib", "cdylib"]  

[dependencies]
ring = "0.17"
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[build-dependencies]
cbindgen = "0.26"

[features]
default = []
ffi = []  
